--- a/src/assets/css/globle.css
+++ b/src/assets/css/globle.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .el-card {
   box-shadow: 0 1px 1px rgb(0, 0, 0, 0.15) !important;
 }
